--- a/notebooks/Payload_Rollup_Minimal_Example.ipynb
+++ b/notebooks/Payload_Rollup_Minimal_Example.ipynb
@@ -31,8 +31,8 @@
     "import shapely.wkt\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from nearmap_ai.feature_api import FeatureApi\n",
-    "from nearmap_ai import constants, log, parcels\n",
+    "from nmaipy.feature_api import FeatureApi\n",
+    "from nmaipy import constants, log, parcels\n",
     "\n",
     "# Path to local API response cache\n",
     "CACHE_DIR = Path(\"./cache\")\n",
