[TRO-3040] Fixed tests failing due to missing url, and suppressed shapely errors on reference implementation

--- a/notebooks/Payload_Rollup_Minimal_Example.ipynb
+++ b/notebooks/Payload_Rollup_Minimal_Example.ipynb
@@ -223,23 +223,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/michael.bewley/miniconda3/lib/python3.11/site-packages/shapely/set_operations.py:133: RuntimeWarning: invalid value encountered in intersection\n",
-      "  return lib.intersection(a, b, **kwargs)\n",
-      "/Users/michael.bewley/miniconda3/lib/python3.11/site-packages/shapely/set_operations.py:77: RuntimeWarning: invalid value encountered in difference\n",
-      "  return lib.difference(a, b, **kwargs)\n",
-      "/Users/michael.bewley/miniconda3/lib/python3.11/site-packages/shapely/constructive.py:181: RuntimeWarning: invalid value encountered in buffer\n",
-      "  return lib.buffer(\n",
-      "/Users/michael.bewley/miniconda3/lib/python3.11/site-packages/shapely/constructive.py:1000: RuntimeWarning: invalid value encountered in oriented_envelope\n",
-      "  return lib.oriented_envelope(geometry, **kwargs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import logging\n",
+    "\n",
+    "logging.root.setLevel(logging.DEBUG)\n",
+    "polygon = shapely.wkt.loads(\n",
+    "    \"POLYGON ((-74.27669919318933 40.62759165649627, -74.27684942918067 40.62768297885442, -74.27709829841933 40.62784547600499, -74.27685577334728 40.6280515391464, -74.27647245210946 40.62780346829123, -74.27669755653214 40.62759114461118, -74.27669919318933 40.62759165649627))\"\n",
+    ")\n",
+    "polygon\n",
+    "\n",
     "# Filter out edge features based on default logic (ratios in parcel and minimum clipped areas)\n",
     "parcel_gdf = gpd.GeoDataFrame(\n",
     "    {\"geometry\": [polygon], \"aoi_id\": 0},\n",
